add flume-gn log4j-loadbalancing config

--- a/log4j-flume/src/main/resources/log4j.properties
+++ b/log4j-flume/src/main/resources/log4j.properties
@@ -4,3 +4,15 @@ log4j.appender.flume.Port = 44444
 log4j.appender.flume.UnsafeMode = true
 
 log4j.logger.org.os.flume.WriteLog = DEBUG,flume
+
+
+
+#log4j-loadbalancing config
+#log4j.rootLogger = INFO, flume
+#log4j.appender.flume = org.apache.flume.clients.log4jappender.LoadBalancingLog4jAppender
+#log4j.appender.flume.Hosts = 10.28.13.105:44444 10.28.13.106:44444 10.28.13.107:44444
+#log4j.appender.flume.UnsafeMode = false
+#log4j.appander.flume.Selector = ROUND_ROBIN
+#log4j.appender.flume.MaxBackoff = 120000
+#
+#log4j.logger.org.os.flume.WriteLog = DEBUG,flume
