--- a/akka/akka-sample/akka-sample-cluster-java/src/main/resources/application.conf
+++ b/akka/akka-sample/akka-sample-cluster-java/src/main/resources/application.conf
@@ -1,20 +1,20 @@
 #//#snippet
 akka {
   actor {
-    provider = "akka.cluster.ClusterActorRefProvider"
+    provider = "cluster"
   }
   remote {
     log-remote-lifecycle-events = off
     netty.tcp {
-#//# akka 所属的主机IP
-      hostname = "127.0.0.1"
+      hostname = "10.5.5.119"
       port = 0
     }
   }
 
   cluster {
     seed-nodes = [
-      "akka.tcp://ClusterSystem@127.0.0.1:2551"]
+      "akka.tcp://ClusterSystem@10.5.5.119:2551",
+      "akka.tcp://ClusterSystem@10.5.5.119:2552"]
 
     #//#snippet
     # excluded from snippet
@@ -34,6 +34,6 @@ akka.cluster.metrics.enabled=off
 akka.extensions=["akka.cluster.metrics.ClusterMetricsExtension"]
 
 # Sigar native library extract location during tests.
-# Note: use per-jvm-instance folder when running multiple jvm on one host.
+# Note: use per-jvm-instance folder when running multiple jvm on one host. 
 akka.cluster.metrics.native-library-extract-folder=${user.dir}/target/native
 #//#snippet
