--- a/jwt-spring-security-angular/pom.xml
+++ b/jwt-spring-security-angular/pom.xml
@@ -3,12 +3,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.zerhusen</groupId>
-    <artifactId>jwtdemo</artifactId>
+    <groupId>com.kingmed</groupId>
+    <artifactId>gps-weixin</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>jwtdemo</name>
+    <name>weixin</name>
     <description>Demo project for JWT with Spring Security</description>
 
     <parent>
