--- a/log4j-flume/pom.xml
+++ b/log4j-flume/pom.xml
@@ -39,6 +39,11 @@
 			<artifactId>flume-ng-log4jappender</artifactId>
 			<version>1.7.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.flume.</groupId>
+			<artifactId>flume-ng-core</artifactId>
+			<version>1.7.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
