--- a/log4j-flume/src/main/resources/log4j.properties
+++ b/log4j-flume/src/main/resources/log4j.properties
@@ -1,22 +1,25 @@
-#log4j.appender.flume = org.apache.flume.clients.log4jappender.Log4jAppender
-#log4j.appender.flume.Hostname = 10.28.13.105
-#log4j.appender.flume.Port = 44444
-#log4j.appender.flume.UnsafeMode = true
+log4j.appender.flume = org.apache.flume.clients.log4jappender.Log4jAppender
+log4j.appender.flume.Hostname = 10.5.5.129
+log4j.appender.flume.Port = 55555
+log4j.appender.flume.UnsafeMode = true
 #
-#log4j.logger.org.os.flume.WriteLog = DEBUG,flume
+log4j.logger.org.os.flume.WriteLog = DEBUG,flume
 
 
 
 #log4j-loadbalancing config
-#log4j.rootLogger = INFO, flume
+log4j.rootLogger = flume
 
-log4j.appender.flume = org.apache.flume.clients.log4jappender.LoadBalancingLog4jAppender
-log4j.appender.flume.Hosts = 10.5.5.119:44444 10.28.13.105:44444 10.28.13.106:44444
-log4j.appender.flume.UnsafeMode = true
-log4j.appander.flume.Selector = ROUND_ROBIN
-log4j.appender.flume.MaxBackoff = 120000
-#log4j.appender.flume.layout=org.apache.log4j.PatternLayout
-
-log4j.logger.org.os.flume.WriteLog = DEBUG,flume
+#log4j.appender.flume = org.apache.flume.clients.log4jappender.LoadBalancingLog4jAppender
+##log4j.appender.flume.Hosts = 10.5.5.119:44444 10.28.13.105:44444 10.28.13.106:44444
+##log4j.appender.flume.Hosts = 10.5.5.102:44444 10.5.5.133:44444
+#log4j.appender.flume.Hosts = 10.5.5.102:55555 10.5.5.129:55555
+##log4j.appender.flume.Hosts = 10.5.5.102:44444
+#log4j.appender.flume.UnsafeMode = true
+#log4j.appander.flume.Selector = ROUND_ROBIN
+#log4j.appender.flume.MaxBackoff = 120000
+##log4j.appender.flume.layout=org.apache.log4j.PatternLayout
+#
+#log4j.logger.org.os.flume.WriteLog = DEBUG,flume
 
 
