fix flume loadbalance bug

--- a/log4j-flume/src/main/resources/log4j.properties
+++ b/log4j-flume/src/main/resources/log4j.properties
@@ -10,12 +10,16 @@
 #log4j-loadbalancing config
 log4j.rootLogger = flume
 
-log4j.appender.flume = org.apache.flume.clients.log4jappender.LoadBalancingLog4jAppender
+#log4j.appender.flume = org.apache.flume.clients.log4jappender.LoadBalancingLog4jAppender
+log4j.appender.flume = org.os.flume.LoadBalancingLog4jAppender
 log4j.appender.flume.Hosts = 10.9.4.157:44444 10.9.4.154:44444
 log4j.appender.flume.UnsafeMode = true
 log4j.appander.flume.Selector = ROUND_ROBIN
 log4j.appender.flume.MaxBackoff = 120000
+log4j.appender.flume.layout=org.apache.log4j.PatternLayout
+log4j.appender.flume.layout.ConversionPattern=%t %p %d{yyyy-MM-dd HH:mm:ss SSS} %c - %m
+log4j.appender.flume.MaxIoWorkers = 30
 #
-log4j.logger.org.os.flume.WriteLog = DEBUG, flume
+log4j.logger.org.os.flume.WriteLog = DEBUG,flume
 
 
